<resources>
    <string name="app_name">Demineur</string>
    <string name="mine">mine</string>
    <string name="enter_your_name">Entrer votre nom</string>
    <string name="allowed_chars">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="new_game">Nouvelle partie</string>
    <string name="easy">Niveau : Facile</string>
    <string name="medium">Niveau : Moyen</string>
    <string name="hard">Niveau : Difficile</string>
</resources>