<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".controller.MainActivity">

    <ImageView
        android:id="@+id/mine"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/mine"
        android:src="@drawable/mine"/>

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_below="@id/mine"
        android:layout_centerHorizontal="true"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:maxLength="10"
        android:ems="10"
        android:background="@drawable/input_background"
        android:autofillHints="textPersonName"
        android:inputType="textPersonName"
        android:digits="@string/allowed_chars"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <SeekBar
        android:id="@+id/level_seekbar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/name_edittext"
        android:layout_centerHorizontal="true"
        android:progressTint="@color/white"
        android:thumbTint="@color/white"
        android:progress="1"
        android:max="2"/>

    <TextView
        android:id="@+id/level_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/level_seekbar"
        android:layout_centerHorizontal="true"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:background="@drawable/input_background"
        android:textColor="@color/orange"
        android:text="@string/medium"/>
    
    <Button
        android:id="@+id/new_game"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/level_textview"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:textColor="@color/light_blue"
        android:text="@string/new_game"/>
</RelativeLayout>